--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,43 +1,30 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>
-     Gestion des Réclamations
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+
 
 <ion-content>
-    <br/>
+    <div class="padding">
+        <div class="logo">
+            <img src="..\..\assets\Hotel.png">
+        </div>
+      <ion-item>
+        <ion-label color="light" >Login</ion-label>
+        <ion-input color="light" [(ngModel)]="username"></ion-input>
+      </ion-item>
     
- 
-  <img src="..\..\assets\Hotel.png">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-
-
-  <table>
+      <ion-item>
+        <ion-label color="light">Mot de passe</ion-label>
+        <ion-input color="light" type="password" placeholder="Mot de passe"[(ngModel)]="password"></ion-input>
+      </ion-item>
       
-      <tr>
-      <td>Login:</td>
-      <td><input type="text" size=25 name="userid"></td>
-      </tr>
-      <br/>
-      <tr>
-      <td>Password:</td>
-      <td><input type="Password" size=25 name="pwd"></td>
-      </tr>
-      
-      <tr>
-          <ion-button  routerLink='/list' expand="block">Login</ion-button>
-
-      </tr>
-      
-  </table>
-
+    
+  
+      <div class="flex" >
+        <ion-button color="light" fill="outline" shape="round" expand="block" routerLink='/list'>
+          <ion-icon slot="start" name="log-in"></ion-icon>
+          Connexion
+        </ion-button>
+  
+      </div>
+    </div>
 
 </ion-content>
 
